--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     
     <div class="music-card">
         <div class="music-image-container">
-            <img src="/assets/WhatsApp Image 2024-04-09 at 9.00.47 PM.jpeg" id="music-image">
+            <img src="assets/WhatsApp Image 2024-04-09 at 9.00.47 PM.jpeg" id="music-image">
             <div class="controls">
                 <i class="fas fa-backward" id="previous-btn"></i>
                 <i class="fas fa-play" id="play-btn"></i>
